[gd_scene load_steps=6 format=3 uid="uid://cnyj38a4c8iou"]

[ext_resource type="PackedScene" uid="uid://cwmptjpks7gyr" path="res://Cenas/Templates/PlayerTemplate.tscn" id="1_4uqh6"]
[ext_resource type="Script" path="res://Scripts/Entidades/Players/SpinBot.gd" id="2_eyha4"]
[ext_resource type="Texture2D" uid="uid://b1m5v0o1xn0da" path="res://Assets/icon.svg" id="3_v5yft"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxmav"]
size = Vector2(116, 116)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bj8tn"]
size = Vector2(120, 120)

[node name="SpinBot" instance=ExtResource("1_4uqh6")]
modulate = Color(1, 0.0705882, 1, 1)
script = ExtResource("2_eyha4")

[node name="Collision" parent="." index="0"]
shape = SubResource("RectangleShape2D_xxmav")

[node name="Texture" parent="." index="1"]
modulate = Color(0.361824, 0.0739487, 0.597206, 1)
texture = ExtResource("3_v5yft")

[node name="TiroPos" parent="." index="2"]
position = Vector2(50, 0)

[node name="CollisionHurtbox" parent="Hurtbox" index="0"]
shape = SubResource("RectangleShape2D_bj8tn")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
